fixing spacing and more ui tweaks

--- a/new/less/projects/quickmatch.less
+++ b/new/less/projects/quickmatch.less
@@ -97,7 +97,7 @@ body {
       line-height: 1.8;
       font-family: 'Lato';
       font-size: 1.25em;
-      font-weight: 400;
+      font-weight: 300;
     }
 
     .half {
